# plugin

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
extras/: README.txt  plugin.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_plugin/: __init__.py  config.yaml
octoprint_plugin/static/js/: plugin.js
octoprint_plugin/templates/: plugin_control.jinja2  plugin_settings.jinja2
translations/: README.txt
