[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin"
version = "0.1.0"
description = "TODO"
authors = [
    {name = "Dominic Boccabella", email = "drboccabella@gmail.com"}
]
readme = {file = "README.md", content-type = "markdown"}
dynamic = [
    "license"
]

requires-python = ">=3.7, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_plugin",
    "octoprint_plugin.*"
]

[project.entry-points."octoprint.plugin"]
plugin = "octoprint_plugin"

[project.urls]
Homepage = "https://github.com/patchesthesnake/plugin"

[project.optional-dependencies]
develop = [
    "go-task-bin"
]
